<resources>
    <string name="app_name">Music App</string>
    <string name="library_title">My Library</string>
    <string name="album_title">Album</string>
    <string name="one_of_us_is_the_killer">One of Us is the Killer</string>
    <string name="the_dillinger_escape_plan">The Dillinger Escape Plan</string>
    <string name="diamond_eyes">Diamond Eyes</string>
    <string name="deftones">Deftones</string>
    <string name="empty_black">Empty Black</string>
    <string name="greyhaven">Greyhaven</string>
    <string name="meridional">Meridional</string>
    <string name="norma_jean">Norma Jean</string>
    <string name="now_playing_song_title">Sweet Machine</string>
    <string name="now_playing_album">Now Playing album cover art.</string>
    <string name="now_playing_play_button">Now Playing play button.</string>
    <string name="one_of_us_is_the_killer_content_desc">Cover art for the album One of Us is the Killer</string>
    <string name="diamond_eyes_content_desc">Cover art for the album Diamond Eyes</string>
    <string name="empty_black_content_desc">Cover art for the album Empty Black</string>
    <string name="meridional_content_desc">Cover art for the album Meridional</string>
    <string name="back_button_text">Go to My Library</string>
</resources>
