<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" />

    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardElevation="@dimen/card_elevation">

        <RelativeLayout
            android:id="@+id/now_playing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/scroll_view"
            android:background="@color/nowPlayingBackground">

            <ImageView
                android:id="@+id/now_playing_album"
                android:layout_width="@dimen/now_playing_album_width"
                android:layout_height="@dimen/now_playing_album_height"
                android:layout_margin="@dimen/now_playing_album_margin"
                android:contentDescription="@string/now_playing_album"
                android:src="@drawable/empty_black" />

            <TextView
                android:id="@+id/now_playing_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/now_playing_album"
                android:text="@string/now_playing_song_title" />

            <TextView
                android:id="@+id/now_playing_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/now_playing_song"
                android:layout_toRightOf="@id/now_playing_album"
                android:text="@string/greyhaven" />

            <ImageView
                android:id="@+id/now_playing_play_button"
                android:layout_width="@dimen/now_playing_button_width"
                android:layout_height="@dimen/now_playing_button_height"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:contentDescription="@string/now_playing_play_button"
                android:src="@drawable/play_button" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>