<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardElevation="8dp">

        <RelativeLayout
            android:id="@+id/now_playing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/scroll_view"
            android:background="@color/nowPlayingBackground">

            <ImageView
                android:id="@+id/now_playing_album"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_margin="16dp"
                android:src="@drawable/empty_black" />

            <TextView
                android:id="@+id/now_playing_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/now_playing_album"
                android:text="@string/now_playing_song_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/now_playing_song"
                android:layout_toRightOf="@id/now_playing_album"
                android:text="@string/greyhaven" />

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@drawable/play_button" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/one_of_us_is_the_killer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin">

                    <ImageView
                        android:id="@+id/one_of_us_is_the_killer_image_view"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/one_of_us_is_the_killer" />

                    <TextView
                        android:id="@+id/one_of_us_is_the_killer_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/one_of_us_is_the_killer_image_view"
                        android:text="@string/one_of_us_is_the_killer"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/the_dillinger_escape_plan_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/one_of_us_is_the_killer_text_view"
                        android:text="@string/the_dillinger_escape_plan"
                        android:textSize="10sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/diamond_eyes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/diamond_eyes_image_view"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/diamond_eyes" />

                    <TextView
                        android:id="@+id/diamond_eyes_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@id/diamond_eyes_image_view"
                        android:text="@string/diamond_eyes"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/deftones_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/diamond_eyes_text_view"
                        android:text="@string/deftones"
                        android:textSize="10sp" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/empty_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/activity_horizontal_margin">

                    <ImageView
                        android:id="@+id/empty_black_image_view"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/empty_black" />

                    <TextView
                        android:id="@+id/empty_black_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@id/empty_black_image_view"
                        android:text="@string/empty_black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/greyhaven_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/empty_black_text_view"
                        android:text="@string/greyhaven"
                        android:textSize="10sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/meridional"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/meridional_image_view"
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/meridional" />

                    <TextView
                        android:id="@+id/meridional_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@id/meridional_image_view"
                        android:text="@string/meridional"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/norma_jean_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/meridional_text_view"
                        android:text="@string/norma_jean"
                        android:textSize="10sp" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>